setup mysql server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,11 +20,36 @@ services:
               source: ./website
               target: /code
         command: sh -c "npm install && npm run dev"
-        # command: sh -c "npm install && npm run dev -- --host"
         ports:
             - 3000:3000
         networks:
             - cb
+    database:
+        image: 'mysql/mysql-server:8.0'
+        ports:
+            - '3306:3306'
+        environment:
+            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_ROOT_HOST: '%'
+            MYSQL_DATABASE: '${DB_DATABASE}'
+            MYSQL_USER: '${DB_USERNAME}'
+            MYSQL_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_ALLOW_EMPTY_PASSWORD: 1
+        volumes:
+            - 'database:/var/lib/mysql'
+        networks:
+            - cb
+        healthcheck:
+            test:
+                - CMD
+                - mysqladmin
+                - ping
+                - '-p${DB_PASSWORD}'
+            retries: 3
+            timeout: 5s
 networks:
     cb:
         driver: bridge
+volumes:
+    database:
+        driver: local
