poem and sqlx test

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -4,6 +4,8 @@ EXPOSE 8000
 
 WORKDIR /code
 
+RUN useradd -m -u 1000 user
+
 RUN cargo install cargo-watch
 
 RUN cargo install sqlx-cli --no-default-features --features native-tls,mysql
