--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,9 @@ services:
         image: website/cookbook
         volumes:
             - './website:/code'
-        command: sh -c "rm -rf /tmp/nitro/worker-* && npm install && npm run dev"
+        command: sh -c "npm install && npm run dev -- --host"
         ports:
-            - 3000:3000
+            - 5173:5173
         networks:
             - cb
     database:
