--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
         volumes:
             - './website:/code'
         command: sh -c "npm install && npm run dev -- --host"
+        environment:
+            PUBLIC_API_URL: '${SVELTE_API_URL}'
         ports:
             - 5173:5173
         networks:
