--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -9,8 +9,10 @@ edition = "2021"
 poem = "1.3.58"
 poem-openapi = { version = "3.0.5", features = ["swagger-ui", "email"] }
 tokio = { version = "1.34.0", features = ["full"] }
-sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql" ] }
+sqlx = { version = "0.7", features = ["runtime-tokio", "mysql"] }
 serde = "1.0.192"
 serde_json = "1.0"
 jsonwebtoken = "9.1.0"
 argon2 = "0.5.2"
+reqwest = { version = "0.11", features = ["json"] }
+async-trait = "0.1.74"
