--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
         command: sh -c "cargo watch -x run"
         environment:
             DATABASE_URL: '${DB_URL}'
+            STORAGE_URL: '${API_STORAGE_URL}'
         ports:
             - 8000:8000
         networks:
