--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 
 [dependencies]
 poem = "1.3.58"
-poem-openapi = { version = "3.0.5", features = ["swagger-ui", "email"] }
+poem-openapi = { version = "3.0.5", features = ["swagger-ui", "email", "chrono"] }
 tokio = { version = "1.34.0", features = ["full"] }
-sqlx = { version = "0.7", features = ["runtime-tokio", "mysql"] }
+sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono"] }
 serde = "1.0.192"
 serde_json = "1.0"
 jsonwebtoken = "9.1.0"
