--- a/website/package.json
+++ b/website/package.json
@@ -11,6 +11,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "1.3",
 		"@sveltejs/kit": "^1.27.4",
 		"autoprefixer": "^10.4.16",
 		"daisyui": "^4.4.6",
