changed env variables

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,13 @@
 DB_PASSWORD=
 DB_DATABASE=
 DB_USERNAME=
-DB_ADDRESS=
-DB_URL="mysql://${DB_USERNAME}:${DB_PASSWORD}@${DB_ADDRESS}/${DB_DATABASE}"
 
-DUFS_ADMIN_AUTH=
-DUFS_PUBLIC_AUTH=
+DUFS_AUTH=
 
 SVELTE_BROWSER_API_URL=
 SVELTE_SERVER_API_URL=
 
 API_STORAGE_URL=
 API_SECRET=
+API_DB_ADDRESS=
+API_DB_URL="mysql://${DB_USERNAME}:${DB_PASSWORD}@${API_DB_ADDRESS}/${DB_DATABASE}"
