--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -16,3 +16,4 @@ jsonwebtoken = "9.1.0"
 argon2 = "0.5.2"
 reqwest = { version = "0.11", features = ["json"] }
 async-trait = "0.1.74"
+futures = "0.3.30"
