--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
     api:
         build: ./api
@@ -11,10 +10,7 @@ services:
             STORAGE_URL: '${API_STORAGE_URL}'
             SECRET: '${API_SECRET}'
             CARGO_TARGET_DIR: '/build'
-        ports:
-            - 8000:8000
-        networks:
-            - cb
+        network_mode: host
     website:
         build: ./website
         image: cookbook/website
@@ -22,16 +18,10 @@ services:
             - './website:/code'
         command: sh -c "npm install && npm run dev -- --host"
         environment:
-            PUBLIC_BROWSER_API_URL: '${SVELTE_BROWSER_API_URL}'
-            PUBLIC_SERVER_API_URL: '${SVELTE_SERVER_API_URL}'
-        ports:
-            - 5173:5173
-        networks:
-            - cb
+            PUBLIC_API_URL: '${SVELTE_API_URL}'
+        network_mode: host
     database:
         image: 'mysql/mysql-server:8.0'
-        ports:
-            - '3306:3306'
         environment:
             MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
             MYSQL_ROOT_HOST: '%'
@@ -41,8 +31,7 @@ services:
             MYSQL_ALLOW_EMPTY_PASSWORD: 1
         volumes:
             - 'database:/var/lib/mysql'
-        networks:
-            - cb
+        network_mode: host
         healthcheck:
             test:
                 - CMD
@@ -53,16 +42,10 @@ services:
             timeout: 5s
     files:
         image: 'sigoden/dufs'
-        ports:
-            - 5000:5000
         volumes:
             - 'files:/data'
         command: '/data -A -a ${DUFS_AUTH}'
-        networks:
-            - cb
-networks:
-    cb:
-        driver: bridge
+        network_mode: host
 volumes:
     database:
         driver: local
