--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -1,7 +1,18 @@
-FROM node:18-alpine3.17
+FROM node:18-slim
 
 EXPOSE 5173
 EXPOSE 80
+
+# Install Puppeteer dependencies
+RUN apt-get update \
+    && apt-get install -y wget gnupg ca-certificates \
+    && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
+    && sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list' \
+    && apt-get update \
+    && apt-get install -y google-chrome-stable \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN npx puppeteer browsers install chrome
 
 WORKDIR /code
 
