--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-poem = "1.3.58"
+poem = { version = "1.3.58", features = ["rustls"] }
 poem-openapi = { version = "3.0.5", features = ["swagger-ui", "email", "chrono"] }
 tokio = { version = "1.34.0", features = ["full"] }
 sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono"] }
