--- a/.air.toml
+++ b/.air.toml
@@ -9,12 +9,12 @@ tmp_dir = "tmp"
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata", "pb_public", "node_modules", "pb_data"]
   exclude_file = []
-  exclude_regex = ["_test.go", "_templ.go"]
+  exclude_regex = ["_test.go", ".*_templ.go"]
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
   include_dir = []
-  include_ext = ["go", "tpl", "tmpl", "html"]
+  include_ext = ["go", "tpl", "tmpl", "html", "templ"]
   include_file = []
   kill_delay = "0s"
   log = "build-errors.log"
@@ -42,9 +42,9 @@ tmp_dir = "tmp"
   clean_on_exit = false
 
 [proxy]
-  app_port = 0
-  enabled = false
-  proxy_port = 0
+  app_port = 8090
+  enabled = true
+  proxy_port = 8080
 
 [screen]
   clear_on_rebuild = false
